--- a/index.html
+++ b/index.html
@@ -6,7 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zhengyang Zhang | Academic Portfolio</title>
     <meta name="description"
-        content="Academic portfolio of Zhengyang Zhang, specializing in Artificial Intelligence and Machine Learning.">
+        content="Academic portfolio of Zhengyang Zhang, a PhD student at Yunnan Observatories specializing in Stellar Evolution, Pulsation, Supernova Parameter Inference, and AI in Astrophysics.">
+    <meta name="keywords"
+        content="Zhengyang Zhang, Astrophysics, AI, Machine Learning, Stellar Evolution, Supernova, Yunnan Observatories, PhD Student, Research">
+    <meta name="author" content="Zhengyang Zhang">
+    <link rel="canonical" href="https://Her00000.github.io/zzy.github.io/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://Her00000.github.io/zzy.github.io/">
+    <meta property="og:title" content="Zhengyang Zhang | Academic Portfolio">
+    <meta property="og:description"
+        content="PhD student at Yunnan Observatories specializing in Stellar Evolution, Pulsation, Supernova Parameter Inference, and AI in Astrophysics.">
+    <meta property="og:image" content="https://Her00000.github.io/zzy.github.io/assets/deep_space_bg.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://Her00000.github.io/zzy.github.io/">
+    <meta property="twitter:title" content="Zhengyang Zhang | Academic Portfolio">
+    <meta property="twitter:description"
+        content="PhD student at Yunnan Observatories specializing in Stellar Evolution, Pulsation, Supernova Parameter Inference, and AI in Astrophysics.">
+    <meta property="twitter:image" content="https://Her00000.github.io/zzy.github.io/assets/deep_space_bg.png">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
